docs: add further api documentation
